--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -13,7 +13,8 @@ spec:
         app: kub-test
     spec:
       containers:
-        - name: flask-app
-          image: kub_test:latest
-          ports:
-            - containerPort: 5000
+      - name: flask-app
+        image: altjin09/kub_test:latest
+        ports:
+        - containerPort: 5000
+        imagePullPolicy: IfNotPresent
