--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,5 +1,4 @@
-# .github/workflows/ci-cd.yaml
-name: CI/CD for Flask with Kind
+name: CI/CD for Flask with DockerHub & Kind
 
 on:
   push:
@@ -27,7 +26,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: altjin09/kub_test:latest
+        tags: altjin09/kub_test:latest  # өөрийн DockerHub хэрэглэгчийн нэрийг ашигласан эсэхээ шалгаарай
 
     - name: Create Kind cluster
       uses: helm/kind-action@v1.8.0
@@ -36,9 +35,6 @@ jobs:
       uses: azure/setup-kubectl@v3
       with:
         version: 'latest'
-
-    - name: Load image into Kind cluster
-      run: kind load docker-image altjin09/kub_test:latest
 
     - name: Deploy to Kubernetes
       run: |
