--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -6,11 +6,22 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: self-hosted  # Та өөрийн Windows self-hosted runner ашиглаж байгаа тул ингэж бичнэ
+    runs-on: self-hosted
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
+    - name: Run tests
+      run: pytest tests/
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
