--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ Werkzeug==3.1.3
 
 Flask
 pytest
+
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-flask
+opentelemetry-exporter-otlp
